# diffben

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  testbook.ipynb
compscale/analysis/: diagnose_pilot.py  fit_scaling_law.py  order_permutation.py  sanity_report.py  seed_variance.py
compscale/benchmark/: generate_prompts.py  validate_lengths.py
compscale/benchmark/ontology/: countable_objects.json  negation_targets.json  spatial_objects.json
compscale/benchmark/prompts/: attribute_pilot.json  attribute_pilot_v2.json  negation_pilot.json  numeracy_pilot.json  numeracy_pilot_v2.json  numeracy_pilot_v3.json  spatial_pilot.json
compscale/evaluation/: sample_for_labeling.py  vlm_reliability.py  vlm_verify.py
compscale/generation/: generate_images.py  permute_prompts.py
compscale/sanity/: RUN.md
