[project]
name = "diffben"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "protobuf>=5.29.6",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
